tests/checker/ok/stream_compose.can
main = () => Unit {
    List("a", "b", "c")
        .streamOf()
        .map((String) => String { String.concat("!") })
        .filter((String) => Bool { True() })
        .take(2)
        .concat(List("d").streamOf())
        .toString()
        .print()
}
