tests/checker/fail/stream_compose.can
Unit => Program {
    List("a" * "b" * "c")
        .streamOf()
        -> Mapped((String) => String { `{String}!` })
        .filter((String) => Bool { True() })
        .take(2)
        -> Joined(List("d").streamOf())
        .toString()
        -> Print
}
